--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <div class="button multiply">X</div>
                 <div class="button divide">÷</div>
                 <div class="button equals">=</div>
+                <div class="button clear">C</div>
             </div>
         </div>
     </main>
