Iterate on button function

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
   </head>
     <header>
         <h1 class="calculatorName">This Is Not A Calculator</h1>
@@ -16,22 +15,22 @@
                 <p class="calculatedDisplay">0</p>
             </div>
             <div class="buttonContainer">
-                <div class="button numberOne">1</div>
-                <div class="button numberTwo">2</div>
-                <div class="button numberThree">3</div>
-                <div class="button numberFour">4</div>
-                <div class="button numberFive">5</div>
-                <div class="button numberSix">6</div>
-                <div class="button numberSeven">7</div>
-                <div class="button numberEight">8</div>
-                <div class="button numberNine">9</div>
-                <div class="button numberZero">0</div>
-                <div class="button add">+</div>
-                <div class="button subtract">-</div>
-                <div class="button multiply">X</div>
-                <div class="button divide">÷</div>
-                <div class="button equals">=</div>
-                <div class="button clear">C</div>
+                <button class="button numberOne">1</button>
+                <button class="button numberTwo">2</button>
+                <button class="button numberThree">3</button>
+                <button class="button numberFour">4</button>
+                <button class="button numberFive">5</button>
+                <button class="button numberSix">6</button>
+                <button class="button numberSeven">7</button>
+                <button class="button numberEight">8</button>
+                <button class="button numberNine">9</button>
+                <button class="button numberZero">0</button>
+                <button class="button add">+</button>
+                <button class="button subtract">-</button>
+                <button class="button multiply">X</button>
+                <button class="button divide">÷</button>
+                <button class="button equals">=</button>
+                <button class="button clear">C</button>
             </div>
         </div>
     </main>
@@ -39,4 +38,5 @@
     <p class="quote">Inspirational Quote</p>
 </footer>
 </body>
+<script src="script.js" defer></script>
 </html>
